--- a/assets/scss/front-page.scss
+++ b/assets/scss/front-page.scss
@@ -1,4 +1,4 @@
-.portfolio, .blog {
+.portfolio-container, .blog-container {
 	background: $gray-lighter;
 	margin-bottom: 1em;
 	border-radius: 10px
