--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -4,6 +4,27 @@
   border-radius: 0px;
 }
 
+.sulkosaurus-ul {
+  margin: 0;
+  padding: 0;
+}
+
+.sulkosaurus-li {
+  width: 44px;
+  height: 44px;
+}
+
+#sulkosaurus-svg {
+  width: 44px;
+  height: 44px;
+  fill: $body-bg;
+}
+
+.navbar-header {
+  margin-top: 3px;
+  margin-right: 15px;
+}
+
 .navbar-default .navbar-nav > li > a {
   color: $body-bg;
   transition: all 0.5s ease-in-out;
