--- a/style.css
+++ b/style.css
@@ -1,18 +1,10 @@
 /*
-Theme Name: Template Hierarchy
-Author: Zac Gordon
-Author URI: http://wp.zacgordon.com/
-Description: Example theme for working with template hierarchy
+Theme Name: sulkosaurus
+Author: Scott Cox
+Author URI: http://www.sulkosaurus.com
+Description: Theme for use with my portfolio site
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-
-*/
-
-/*
-
-Import parent CSS if child theme
-
-@import url("../twentytwelve/style.css");
 
 */
