--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -14,6 +14,10 @@
 @import "header";
 @import "image";
 @import "links";
-@import "main";
 @import "page-contact";
 @import "single";
+
+
+
+@import "main";
+@import "media-queries";
