Changed single-portfolio so that it has the correct link back to the portfolio at the top of the page now.

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -16,8 +16,7 @@
 @import "links";
 @import "page-contact";
 @import "single";
-
-
+// @import "typography";
 
 @import "main";
 @import "media-queries";
