--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -15,6 +15,7 @@
 @import "image";
 @import "links";
 @import "page-contact";
+@import "page-portfolio";
 @import "single";
 // @import "typography";
 
